completed index and get details page frontend

--- a/public/development/index.html
+++ b/public/development/index.html
@@ -31,20 +31,13 @@
       </div>
     </header>
 
-    <div class="container-fluid my-5 mx-0">
-      <div class="row flex-column py-3 px-2">
-        <div class="col">
-          <div class="table-heading px-3">
-            <h1>All Users</h1>
-          </div>
-        </div>
-        <div class="col mx-3">
-          <a href="#" class="justify-self-right">
-            <button type="button" class="btn btn-primary rounded-pill">Add User</button>
-          </a>
-        </div>
-      </div>
+    <div class="container-fluid page-wrapper my-5 mx-0 px-0">
 
+      <div class="table-heading m-4">
+        <h1>All Users</h1>
+        <button type="button" class="btn btn-primary rounded-pill">Add User</button>
+      </div>
+        
       <div class="table-responsive container-fluid">
         <div class="table-container m-3">
           <table class="table table-bordered">
